--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,7 @@ build:
   script:
     - cp {{ name }} $PREFIX/bin/
     - cp -r LatexIndent $PREFIX/bin/
+    - cp defaultSettings.yaml $PREFIX/bin/LatexIndent/
 
 requirements:
   build:
@@ -24,7 +25,6 @@ requirements:
   run:
     - perl
     - perl-file-homedir
-    - perl-unicode-linebreak
     - perl-yaml-tiny
 
 test:
