--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,9 +8,11 @@ package:
 source:
   url: https://github.com/cmhughes/{{ name }}/archive/V{{ version }}.tar.gz
   sha256: 59ad9808a140cb9b6a39b20dae0ce690ce8292491030f2a81a4c36060b49c667
+  patches:
+   - deps.patch
 
 build:
-  number: 1
+  number: 2
   noarch: generic
   script:
     - cp {{ name }} $PREFIX/bin/
@@ -25,7 +27,6 @@ requirements:
   run:
     - perl
     - perl-file-homedir
-    - perl-unicode-linebreak
     - perl-yaml-tiny
 
 test:
