--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,9 +15,10 @@ build:
   number: 0
   noarch: generic
   script:
-    - cp {{ name }} $PREFIX/bin/
-    - cp -r LatexIndent $PREFIX/bin/
-    - cp defaultSettings.yaml $PREFIX/bin/LatexIndent/
+    - perl Makefile.PL INSTALLDIRS=vendor NO_PERLLOCAL=1 NO_PACKLIST=1
+    - make
+    - make test
+    - make install VERBINST=1
 
 requirements:
   build:
@@ -32,6 +33,8 @@ requirements:
 test:
   commands:
     - {{ name }} --version
+  imports:
+    - LatexIndent::Version
 
 about:
   home: https://github.com/cmhughes/{{ name }}
