--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,8 +8,6 @@ package:
 source:
   url: https://github.com/cmhughes/{{ name }}/archive/V{{ version }}.tar.gz
   sha256: a2f7f0c68b6c86bdcde269a4cb43c02d7e6276b29e0e962d5b0b4b8d5efe75e7
-  patches:
-    - deps.patch
 
 build:
   number: 0
@@ -32,7 +30,7 @@ requirements:
 
 test:
   commands:
-    - {{ name }} --version
+    - {{ name }} --version | grep {{ version }}
 
 about:
   home: https://github.com/cmhughes/{{ name }}
